# particle_sim

./: CMakeLists.txt  README.md
include/: collisions.h  globals.h  pair_hash.h  particle.h
src/: collisions.cpp  globals.cpp  main.cpp  particle.cpp  particle.h
